[package]
name = "pixiv-exporter"
version = "0.1.0"
edition = "2024"
description = "Pixiv illustration metrics exporter for Prometheus"
license = "MIT"
authors = ["aarkegz <aarkegz@gmail.com>"]
repository = "https://github.com/GeminiLab/pixiv-exporter"
homepage = "https://github.com/GeminiLab/pixiv-exporter"
documentation = "https://docs.rs/pixiv-exporter"
readme = "README.md"
keywords = ["pixiv", "prometheus", "exporter", "metrics"]
categories = ["command-line-utilities", "web-programming"]
rust-version = "1.91"
include = ["src/", "README.md", "LICENSE", "Cargo.lock"]

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
log = { version = "0.4", features = ["std"] }
pixiv3-rs = "0.1"
env_logger = "0.11"
rand = "0.10"
schemars = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.16", features = ["schemars_1"] }
soft-cycle = "0.2"
tokio = { version = "1.49", features = ["full"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.18.1"
anyhow = "1.0"

[profile.release-musl]
inherits = "release"
opt-level = "s" 
strip = "symbols"
lto = true
codegen-units = 1
